# scrs

./: .gitignore  BRANCH_DISPOSITION.md  Cargo.toml  LICENSE  README.md
benches/: decoder_latency.rs  e2e_latency.rs  encoder_latency.rs
scrs/: Cargo.toml
scrs/benches/: decoder_latency.rs  e2e_latency.rs  encoder_latency.rs  tower_vs_afft.rs
scrs/examples/: afft.rs  batch_round_trip.rs  recipe_cache.rs  streaming_decode.rs  streaming_encode.rs
scrs/proptest-regressions/afft/: differential.txt
scrs/src/: codec.rs  error.rs  lib.rs  payload.rs  selector.rs
scrs/src/afft/: decoder.rs  differential.rs  encoder.rs  mod.rs  profile.rs  transform.rs
scrs/src/algebra/: gf256.rs  gf65536.rs  mod.rs
scrs/src/batch/: codec.rs  error.rs  mod.rs
scrs/src/decoder/: cache.rs  mod.rs  pattern.rs  recipe.rs  streaming.rs
scrs/src/encoder/: mod.rs  streaming.rs
scrs/src/matrices/: cauchy.rs  coding_matrix.rs  elimination.rs  good_cauchy.rs  view.rs
scrs/src/simd/: aarch64.rs  dispatch.rs  mod.rs  rows.rs  scalar.rs  scale_table.rs  x86.rs
scrs/src/tower/: cauchy.rs  decoder.rs  encoder.rs  error.rs  mod.rs  payload.rs
scrs/src/transport/: symbol_sink.rs
scrs/tests/: zero_alloc.rs
src/: batch.rs  cauchy.rs  cauchy_inverse.rs  encoder.rs  gf256.rs  good_cauchy.rs  lib.rs  matrix.rs  payload.rs  simd.rs  stream.rs
src/algebra/: mod.rs
src/batch/: codec.rs  error.rs  mod.rs
src/decoder/: cauchy_inverse.rs  mod.rs  pattern.rs  recipe.rs  streaming.rs
src/encoder/: mod.rs  streaming.rs
src/matrices/: cauchy.rs  coding_matrix.rs  elimination.rs  mod.rs  view.rs
src/transport/: mod.rs
